// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea 1`] = `
<textarea
  aria-invalid="false"
  autocomplete="off"
  autocorrect="off"
  class="Textareastyles__Box-hlpio7-0 caKrog"
  cols="50"
  rows="3"
  wrap="soft"
/>
`;

exports[`Textarea w/ design 1`] = `
Array [
  <textarea
    aria-invalid="false"
    autocomplete="off"
    autocorrect="off"
    class="Textareastyles__Box-hlpio7-0 caKrog"
    cols="50"
    rows="3"
    wrap="soft"
  />,
  <textarea
    aria-invalid="false"
    autocomplete="off"
    autocorrect="off"
    class="Textareastyles__Box-hlpio7-0 fYDlcN"
    cols="50"
    rows="3"
    wrap="soft"
  />,
]
`;

exports[`Textarea w/ disabled 1`] = `
Array [
  <textarea
    aria-invalid="false"
    autocomplete="off"
    autocorrect="off"
    class="Textareastyles__Box-hlpio7-0 caKrog"
    cols="50"
    disabled=""
    rows="3"
    wrap="soft"
  />,
  <textarea
    aria-invalid="false"
    autocomplete="off"
    autocorrect="off"
    class="Textareastyles__Box-hlpio7-0 fYDlcN"
    cols="50"
    disabled=""
    rows="3"
    wrap="soft"
  />,
]
`;

exports[`Textarea w/ invalid 1`] = `
Array [
  <textarea
    aria-invalid="true"
    autocomplete="off"
    autocorrect="off"
    class="Textareastyles__Box-hlpio7-0 hdLoNw"
    cols="50"
    rows="3"
    wrap="soft"
  />,
  <textarea
    aria-invalid="true"
    autocomplete="off"
    autocorrect="off"
    class="Textareastyles__Box-hlpio7-0 fBVaZQ"
    cols="50"
    rows="3"
    wrap="soft"
  />,
]
`;

exports[`Textarea w/ onBlur() 1`] = `
<Textareastyles__Box
  aria-invalid={false}
  autoComplete="off"
  autoCorrect="off"
  cols={50}
  design="outline"
  name="textarea"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  rows={3}
  size="m"
  spellcheck="false"
  wrap="soft"
/>
`;

exports[`Textarea w/ onChange() 1`] = `
<Textareastyles__Box
  aria-invalid={false}
  autoComplete="off"
  autoCorrect="off"
  cols={50}
  design="outline"
  name="textarea"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  rows={3}
  size="m"
  spellcheck="false"
  wrap="soft"
/>
`;

exports[`Textarea w/ onChange() w/ disabled 1`] = `
<Textareastyles__Box
  aria-invalid={false}
  autoComplete="off"
  autoCorrect="off"
  cols={50}
  design="outline"
  disabled={true}
  name="textarea"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  rows={3}
  size="m"
  spellcheck="false"
  wrap="soft"
/>
`;

exports[`Textarea w/ onFocus() 1`] = `
<Textareastyles__Box
  aria-invalid={false}
  autoComplete="off"
  autoCorrect="off"
  cols={50}
  design="outline"
  name="textarea"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  rows={3}
  size="m"
  spellcheck="false"
  wrap="soft"
/>
`;

exports[`Textarea w/ onKeyDown() 1`] = `
<Textareastyles__Box
  aria-invalid={false}
  autoComplete="off"
  autoCorrect="off"
  cols={50}
  design="outline"
  name="textarea"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "key": "a",
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  rows={3}
  size="m"
  spellcheck="false"
  wrap="soft"
/>
`;

exports[`Textarea w/ onKeyPress() 1`] = `
<Textareastyles__Box
  aria-invalid={false}
  autoComplete="off"
  autoCorrect="off"
  cols={50}
  design="outline"
  name="textarea"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyPress={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "key": "a",
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  rows={3}
  size="m"
  spellcheck="false"
  wrap="soft"
/>
`;

exports[`Textarea w/ onKeyUp() 1`] = `
<Textareastyles__Box
  aria-invalid={false}
  autoComplete="off"
  autoCorrect="off"
  cols={50}
  design="outline"
  name="textarea"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyUp={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "key": "a",
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  rows={3}
  size="m"
  spellcheck="false"
  wrap="soft"
/>
`;

exports[`Textarea w/ size 1`] = `
Array [
  <textarea
    aria-invalid="false"
    autocomplete="off"
    autocorrect="off"
    class="Textareastyles__Box-hlpio7-0 KCehh"
    cols="50"
    rows="3"
    wrap="soft"
  />,
  <textarea
    aria-invalid="false"
    autocomplete="off"
    autocorrect="off"
    class="Textareastyles__Box-hlpio7-0 jJHmpZ"
    cols="50"
    rows="3"
    wrap="soft"
  />,
  <textarea
    aria-invalid="false"
    autocomplete="off"
    autocorrect="off"
    class="Textareastyles__Box-hlpio7-0 caKrog"
    cols="50"
    rows="3"
    wrap="soft"
  />,
  <textarea
    aria-invalid="false"
    autocomplete="off"
    autocorrect="off"
    class="Textareastyles__Box-hlpio7-0 caKrog"
    cols="50"
    rows="3"
    wrap="soft"
  />,
  <textarea
    aria-invalid="false"
    autocomplete="off"
    autocorrect="off"
    class="Textareastyles__Box-hlpio7-0 caKrog"
    cols="50"
    rows="3"
    wrap="soft"
  />,
]
`;

exports[`Textarea w/ some props 1`] = `
<textarea
  aria-invalid="false"
  autocomplete="off"
  autocorrect="off"
  class="Textareastyles__Box-hlpio7-0 caKrog className"
  cols="50"
  id="id"
  name="textarea"
  rows="3"
  title="title"
  wrap="soft"
/>
`;

exports[`Textarea w/ value 1`] = `
<textarea
  aria-invalid="false"
  autocomplete="off"
  autocorrect="off"
  class="Textareastyles__Box-hlpio7-0 caKrog"
  cols="50"
  rows="3"
  wrap="soft"
>
  some value
</textarea>
`;
